--- a/client/src/components/Dashboard/DashboardNav/DashboardNav.scss
+++ b/client/src/components/Dashboard/DashboardNav/DashboardNav.scss
@@ -2,7 +2,7 @@
 
 #dashboardNav {
     width: 20%;
-    height: 100vh;
+    min-height: 100vh;
     padding: 2em;
     background-color: $secondary-background;
 
